# balatroBot-linux-MAIN

./: .gitignore  main.lua  pyproject.toml  run_training.py  setup_linux_env.sh  walkthrough.md
logs/: best_records.json
logs/PPO_Balatro_1/: events.out.tfevents.1781736607.instance-20260617-144259.54943.0
scripts/: benchmark_instances.py  diagnose.py  launch_balatro_fast.py  launch_balatro_multiple.py  patch_fresh_prefix.py  run_demo.py  setup_mods.py
src/: __init__.py  client.py  game_state.py  hand_evaluator.py
src/bots/: __init__.py  base_bot.py  heuristic_bot.py
src/env/: __init__.py  action.py  balatro_env.py  observation.py
src/training/: __init__.py  config.py  evaluate.py  train.py
src/utils/: __init__.py  metrics.py
tests/: test_client.py  test_hand_evaluator.py  test_phase2.py  test_training.py
