[project]
name = "balatrobot-ai"
version = "0.1.0"
description = "AI Bot for Balatro using Reinforcement Learning and heuristics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.3.0",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "tensorboard",
    "psutil>=5.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
pythonpath = ["."]

